--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,11 @@
 		"post-update-cmd": [
 			"@composer dump-autoload"
 		],
-		"test": "phpunit"
+		"test": "phpunit",
+		 "post-install-cmd": [
+     "php artisan clear-compiled",
+     "chmod -R 777 public/"
+ ]
 	},
 	"support": {
 		"forum": "http://forum.codeigniter.com/",
